feat: add full exercise

--- a/index.html
+++ b/index.html
@@ -8,6 +8,240 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="container-1170">
+        <h2>Esercizio esercizietto</h2>
+        <div class="row">
+            <div class="col-12">
+                <div class="row"> <!-- full 1-->
+                    <div class="col-1">
+                        <div class="box">Col 1</div>
+                    </div>
+                    <div class="col-1">
+                        <div class="box">Col 1</div>
+                    </div>
+                    <div class="col-1">
+                        <div class="box">Col 1</div>
+                    </div>
+                    <div class="col-1">
+                        <div class="box">Col 1</div>
+                    </div>
+                    <div class="col-1">
+                        <div class="box">Col 1</div>
+                    </div>
+                    <div class="col-1">
+                        <div class="box">Col 1</div>
+                    </div>
+                    <div class="col-1">
+                        <div class="box">Col 1</div>
+                    </div>
+                    <div class="col-1">
+                        <div class="box">Col 1</div>
+                    </div>
+                    <div class="col-1">
+                        <div class="box">Col 1</div>
+                    </div>
+                    <div class="col-1">
+                        <div class="box">Col 1</div>
+                    </div>
+                    <div class="col-1">
+                        <div class="box">Col 1</div>
+                    </div>
+                    <div class="col-1">
+                        <div class="box">Col 1</div>
+                    </div>
+                </div>
+                <div class="row"> <!--2 5 5-->
+                    <div class="col-2">
+                        <div class="box">Col 2</div>
+                    </div>
+                    <div class="col-5">
+                        <div class="box">Col 5</div>
+                    </div>
+                    <div class="col-5">
+                        <div class="box">Col 5</div>
+                    </div>
+                </div>
+                <div class="row"> <!--12-->
+                    <div class="col-12"> 
+                        <div class="box">Col 12</div>
+                    </div>
+                </div>
+                <div class="row"> <!--8 2 2-->
+                    <div class="col-8">
+                        <div class="box">Col 8</div>
+                    </div>
+                    <div class="col-2">
+                        <div class="box">Col 2</div>
+                    </div>
+                    <div class="col-2">
+                        <div class="box">Col 2</div>
+                    </div>
+                </div>
+                <div class="row"> <!--1 2 2 6 1-->
+                    <div class="col-1">
+                        <div class="box">Col 1</div>
+                    </div>
+                    <div class="col-2">
+                        <div class="box">Col 2</div>
+                    </div>
+                    <div class="col-2">
+                        <div class="box">Col 2</div>
+                    </div>
+                    <div class="col-6">
+                        <div class="box">Col 6</div>
+                    </div>
+                    <div class="col-1">
+                        <div class="box">Col 1</div>
+                    </div>
+                </div>
+                <div class="row"> <!--nested-->
+                    <div class="col-6">
+                        <div class="box">
+                            <div class="row">
+                                <div class="col-2">
+                                    <div class="box nested">Col 2</div>
+                                </div>
+                                <div class="col-2">
+                                    <div class="box nested">Col 2</div>
+                                </div>
+                                <div class="col-8">
+                                    <div class="box nested">Col 8</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-6">
+                        <div class="box">
+                            <div class="row">
+                                <div class="col-6">
+                                    <div class="box nested">Col 6</div>
+                                </div>
+                                <div class="col-6">
+                                    <div class="box nested">Col 6</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12">
+                <div class="row">
+                    <div class="col-12">
+                        <div class="box"></div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-1">
+                        <div class="box"></div>
+                    </div>
+                    <div class="col-11">
+                        <div class="box"></div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-2">
+                        <div class="box"></div>
+                    </div>
+                    <div class="col-10">
+                        <div class="box"></div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-3">
+                        <div class="box"></div>
+                    </div>
+                    <div class="col-9">
+                        <div class="box"></div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-4">
+                        <div class="box"></div>
+                    </div>
+                    <div class="col-8">
+                        <div class="box"></div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-5">
+                        <div class="box"></div>
+                    </div>
+                    <div class="col-7">
+                        <div class="box"></div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-6">
+                        <div class="box"></div>
+                    </div>
+                    <div class="col-6">
+                        <div class="box"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <h2>Offset</h2>
+        <div class="row">
+            <div class="col-12">
+                <div class="row">
+                    <div class="col-1 offset-11">
+                        <div class="box"></div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-2 offset-10">
+                        <div class="box"></div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-3 offset-9">
+                        <div class="box"></div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-4 offset-8">
+                        <div class="box"></div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-5 offset-7">
+                        <div class="box"></div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-6 offset-6">
+                        <div class="box"></div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-7 offset-5">
+                        <div class="box"></div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-8 offset-4">
+                        <div class="box"></div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-9 offset-3">
+                        <div class="box"></div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-10 offset-2">
+                        <div class="box"></div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-11 offset-1">
+                        <div class="box"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
