bonus: add game title

--- a/bonus/celeste.html
+++ b/bonus/celeste.html
@@ -9,18 +9,13 @@
 </head>
 <body>
     <div class="container-square">
-        <div class="row"> <!--strawberry-->
+        <div class="row title">
+            <div class="col-12">
+                <img src="title.webp" alt="">
+            </div>
+        </div>
+        <div class="row content"> <!--strawberry-->
             <div class="col-6 offset-6">
-                <div class="row"> 
-                    <div class="col-1">
-                        <div class="box"></div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-1">
-                        <div class="box"></div>
-                    </div>
-                </div>
                 <div class="row">
                     <div class="col-1 offset-6">
                         <div class="box black"></div>
@@ -331,7 +326,7 @@
                 </div>
             </div>
         </div>
-        <div class="row"> <!--celeste-->
+        <div class="row content"> <!--celeste-->
             <div class="col-6">
                 <div class="row">
                     <div class="col-1">
